kustomize/env/aws/prod/acc-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acc-ui
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: acc-ui
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1024Mi
              cpu: 1000m
