kustomize/env/aws/prod/acc-ui-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: acc-ui-route
spec:
  host: acc.apply-for-innovation-funding.service.gov.uk
  port:
    targetPort: 8080
  to:
    kind: Service
    name: acc-ui-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
